--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -12,7 +12,6 @@
   overflow: hidden;
   align-items: center;
   justify-content: center;
-
 }
 
 .Banner--home {
@@ -21,13 +20,12 @@
   .Banner__image {
     display: flex;
     flex-direction: column;
-    position: fixed; // Utiliser position: fixed pour positionner par rapport à la fenêtre du navigateur
-    top: calc(100vh + 10rem);
+    position: fixed;
+    top: 13rem;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
     height: 100%;
-    display: flex;
     align-items: center;
     justify-content: flex-end;
     max-width: 700px;
@@ -35,30 +33,16 @@
 
     .Banner__title {
       width: 60%;
-      opacity: .5;
-      transition: opacity 1s ease;
+      opacity: 1;
     }
 
     .Banner__logo {
       position: relative;
       width: 100%;
-      height: 100%;
       -o-object-fit: cover;
       object-fit: cover;
       z-index: 100;
-      opacity: .5;
-      transition: all 1s ease;
-    }
-
-    &.isVisible {
-      .Banner__title {
-        opacity: 1;
-      }
-
-      .Banner__logo {
-        opacity: 1;
-        animation: bounceLogo .5s ease-out;
-      }
+      animation: bounceLogo .5s ease-out;
     }
   }
 }
