--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -6,6 +6,7 @@
     @include font;
     font-size: larger;
     background-color: $light;
+    margin-bottom: -51px;
 
     &__logo {
         width: 100px;
