--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     max-width: 1200px;
+    width: 100%;
     height: 6rem;
     margin: .5rem auto;
     padding: 10px 60px;
@@ -18,6 +19,7 @@
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 500ms;
+    gap: 50px;
 
     &::after {
         content: "";
