--- a/src/components/VideoIntro.scss
+++ b/src/components/VideoIntro.scss
@@ -3,15 +3,12 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 33%, rgba(0, 0, 0, 1) 66%, rgba(0, 0, 0, 0) 100%);
-    position: absolute;
-    top: 0;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 33%, rgba(0, 0, 0, 1) 66%, rgba(0, 0, 0, 0) 100%);
 
     >video {
         border-radius: 15px;
-        margin: auto;
-        margin-top: 7rem;
+        margin: 5rem 1rem;
         max-width: 1300px;
         width: 100%;
         height: 80%;
