--- a/src/main.scss
+++ b/src/main.scss
@@ -2,6 +2,10 @@
 @import "./styles/utils/variables.scss";
 @import "./styles/utils/mixins.scss";
 
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 body {
     background-size: cover;
     background-attachment: fixed;
