--- a/src/components/Container.scss
+++ b/src/components/Container.scss
@@ -36,6 +36,10 @@
       align-items: center;
       flex-direction: column;
 
+      @media screen and (max-width: 600px) {
+        margin-top: 350px;
+      }
+
       #presentation__text {
         padding: 20px;
         margin: 20px;
@@ -60,7 +64,6 @@
             padding: 20px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
             animation: fadeInUp 0.5s ease forwards;
-
           }
 
           .presentation1 {
@@ -77,6 +80,7 @@
 
           .presentation4 {
             animation-delay: 0.8s;
+            margin: auto;
           }
 
           @media (min-width: 810px) {
@@ -326,6 +330,30 @@
     margin: 30px auto;
     border-radius: 15px;
 
+    .Snacking__presentation {
+      ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        li {
+          font-size: 26px;
+          font-weight: 500;
+          text-align: center;
+          width: fit-content;
+          margin: 20px;
+          min-width: 200px;
+          max-width: 1000px;
+          padding: 20px;
+
+          a {
+            color: red;
+            font-weight: bolder;
+          }
+        }
+      }
+    }
+
     .imgContainer {
       object-fit: contain;
       width: 100%;
@@ -350,12 +378,17 @@
     padding: 0 40px;
     gap: 20px;
 
+    a {
+      color: red;
+      text-align: center;
+    }
+
     @media (min-width: 1200px) {
-      width: 1000px;
+      max-width: 1400px;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-gap: 60px;
-      grid-template-rows: repeat(3, 300px) 1fr;
+      grid-template-rows: repeat(3, 350px) 1fr;
 
       .Informations {
         &__prices {
@@ -418,7 +451,16 @@
         .map {
           width: 100%;
 
-          @media screen and (min-width: 610px) {
+          &-s {
+            display: flex;
+          }
+
+          &-m,
+          &-xs {
+            display: none;
+          }
+
+          @media screen and (min-width: 610px) and (max-width:1199px) {
             &-m {
               display: flex;
             }
@@ -467,6 +509,7 @@
         flex-direction: column;
         align-items: flex-start;
         list-style-type: disc;
+        padding-left: 0;
 
         li {
           display: flex;
