--- a/src/components/Guidap.scss
+++ b/src/components/Guidap.scss
@@ -4,7 +4,7 @@
 .Guidap {
     position: sticky;
     bottom: 2rem;
-    right: 2rem;
+    right: 5rem;
     margin-left: auto;
     transition: all 0.3s;
 
@@ -12,5 +12,9 @@
         cursor: pointer;
         transform: translate(-10%, -10%);
         transform-origin: bottom right;
+
+        span {
+            color: $second;
+        }
     }
 }
