--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -94,5 +94,8 @@
         font-size: 1.5rem;
         color: var(--title-color);
         cursor: pointer;
+        width: 50px;
+        justify-content: center;
+        align-items: center;
     }
 }
